--- a/html/main.css
+++ b/html/main.css
@@ -1,55 +1,34 @@
-@import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap');
-
-.me-container{
+.box {
   width: 100%;
   max-width: 300px; /* Will be AT MOST 320px wide */
   word-wrap: break-word;
   text-size-adjust: auto;
   height: auto;
-  margin: 50px auto;
-  background: #272727;
-  border-left: 4px solid #fff;
-  border-radius: 5px;
-  padding: 5px;
+  margin: 10px auto;
+  background: #77b6e9;
+  padding: 15px;
   text-align: center;
-  font-weight: 900;
-  font-family: 'Oxygen';
-  font-size: 12px;
+  font-style: italic;
+  font-size: 16px;
   color: #fff;
+  font-family: arial;
   position:relative;
-  display:flex;
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 4px;
+  border-color: #77b6e9;
+  box-shadow:0 0 10px #77b6e9;
 }
 
-.me-container:before {
+.sb3:before {
   content: "";
   width: 0px;
   height: 0px;
   position: absolute;
-  border-left: 10px solid #272727;
+  border-left: 10px solid #77b6e9;
   border-right: 10px solid transparent;
-  border-top: 10px solid #272727;
+  border-top: 10px solid #77b6e9;
   border-bottom: 10px solid transparent;
   left: 19px;
   bottom: -19px;
-}
-
-.icon-container {
-  min-height: 45px;
-  max-height: 45px;
-  min-width: 45px;
-  padding: 5px;
-  padding-top: 10px;
-  padding-bottom: 0px;
-  text-align: center;
-  background: #fff;
-  color: #272727;
-  border-radius: 5px;
-  overflow: hidden;
-}
-
-.text-container {
- padding: 5px;
- padding-left: 15px;
- font-family: 'Oxygen';
-
 }
