--- a/html/css/style.css
+++ b/html/css/style.css
@@ -8,7 +8,7 @@
 .color-6{color: #aa66cc;}
 .color-8{color: #cc0000;}
 .color-9{color: #cc0068;}
-    src: url("../BarlowCondensed.ttf");
+    /* src: url("../BarlowCondensed.ttf"); */
 
 * {
   font-family: 'Roboto', sans-serif;
@@ -119,7 +119,7 @@ textarea:focus, input:focus {
   display: inline-block !important;
   padding: 0.65vw;
   margin: 0.1vw;
-  border-radius: 5px;
+  border-radius: 10px;
   background-color: rgba(47, 114, 181, 0.9);
   width: fit-content;
   max-width: 100%;
